--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.74.7",
+    "@telegram-apps/sdk": "^3.8.0",
+    "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.4"
